# sparse-register-tiling

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.artifact  README.md  _figure_13_mr_4.sh  _figure_13_mr_4_6.sh  _figure_13_mr_6.sh  _figure_13_mr_8.sh  _figure_7_to_9_run.sh  _figure_double_run.sh  _figure_suitesparse_double_run.sh  build_singularity.sh  create_artifact_bundle.sh  create_artifact_bundle_src_only.sh  download_dlmc.sh  figure_10_sbatch.sh  figure_12_sbatch.sh  figure_13_sbatch.sh  figure_7_to_9_plot_sbatch.sh  figure_7_to_9_run_sbatch.sh  figure_double_sbatch.sh  figure_suitesparse_double_sbatch.sh  get_compile_commands.sh  mobilenet_80_multiple_of_16_testing.txt  plot_all.sh  rsync_exclude.txt  run_matrix.py  s_plot.sh  s_run.sh  s_setup.sh  setup.py  sweep_4.txt  sweep_6.txt  sync_to_server.sh  taco-command
.devcontainer/: devcontainer.json
artifact/: run_matrix.py  utils.py
artifact/double/: plot.py  post_process_results.py  run_double.py
artifact/figure10/: filelist.txt  ordered_methods.txt  plot.py  run.py
artifact/figure11/: filelist.txt  plot.py  run.py
artifact/figure12/: filelist.txt  plot.py  run.py
artifact/figure13/: plot.py
artifact/figure7_to_9/: box_plots.py  export_csv.py  plot_figure7.py  plot_figure8.py  plot_figure9.py  post_process_results.py  run.py  scatter_plots.py
artifact/suitesparse/: compute_cov_workingsetsize.py  plot.py  post_process_results.py  run.py  run2.py
bundled_datasets/random/: random_100_768_768.mtx  random_68_768_768.mtx  random_69_768_768.mtx  random_70_768_768.mtx  random_71_768_768.mtx  random_72_768_768.mtx  random_73_768_768.mtx  random_74_768_768.mtx  random_75_768_768.mtx  random_76_768_768.mtx  random_77_768_768.mtx  random_78_768_768.mtx  random_79_768_768.mtx  random_80_768_768.mtx  random_81_768_768.mtx  random_82_768_768.mtx  random_83_768_768.mtx  random_84_768_768.mtx  random_85_768_768.mtx  random_86_768_768.mtx  random_87_768_768.mtx  random_88_768_768.mtx  random_89_768_768.mtx  random_90_768_768.mtx  random_91_768_768.mtx  random_92_768_768.mtx  random_93_768_768.mtx  random_94_768_768.mtx  random_95_768_768.mtx  random_96_768_768.mtx  random_97_768_768.mtx  random_98_768_768.mtx  random_99_768_768.mtx
cpp_testbed/: CMakeLists.txt
cpp_testbed/cmake/: FindARMCL.cmake  FindARMPL.cmake  FindMKL.cmake  FindPAPI.cmake  LinkCake.cmake  LinkVtune.cmake
cpp_testbed/demo/: CMakeLists.txt  Profiler_test.cpp  SPMM_analyze.cpp  SPMM_demo.cpp  coo_block_test.cpp  count_nkerns.cpp  dense_kernels.hpp  tile_cov.cpp  u_kernel_testing.cpp
cpp_testbed/include/: Input.h  PAPIWrapper.h  PackingUtils.h  ParseMatrixMarket.h  ParseSMTX.h  Profiler.h  SparseMatrixIO.h  cpp_testbed.h  csv_log_io.h  custom_assert.h  def.h  mmio.h  sparse_io.h  sparse_utilities.h  template_utils.h  utils.h
cpp_testbed/src/: CMakeLists.txt  Input.cpp  cpp_testbed.cpp  csv_log_io.cpp  mmio.cpp  row_reordering_strategies.cpp  sparse_io.cpp  sparse_utilities.cpp  utils.cpp
cpp_testbed/src/row_reordering/: GreedyRowReordering.cpp  GreedyRowReordering.h  RowReordering.cpp  RowReordering.h  greedy_row_reordering.cpp  row_reordering_algos.h  row_reordering_runtime_mapping.cpp  row_reordering_runtime_mapping.h
cpp_testbed/src/row_reordering/distance_functions/: HammingRowDistance.cpp  HammingRowDistance.h  OverlapPctRowDistance.cpp  OverlapPctRowDistance.h  RowDistance.cpp  RowDistance.h
cpp_testbed/src/spmm/: CMakeLists.txt  SpMMFunctor.h  SpMMTask.h  runtime_yaml_config.cpp  runtime_yaml_config.h
cpp_testbed/src/spmm/ARMCL/: CMakeLists.txt  SpMM_ARMCLDense.h  SpMM_ARMDense.h  runtime_yaml_config.h  runtime_yaml_config.register
cpp_testbed/src/spmm/ARMPL/: CMakeLists.txt  MKL_utils.h  SpMM_ARMPLDense.h  runtime_yaml_config.h  runtime_yaml_config.register
cpp_testbed/src/spmm/ASpT/: SpMM_ASpT.h  runtime_yaml_config.h  runtime_yaml_config.register  runtime_yaml_config.register.cpp
cpp_testbed/src/spmm/GECSB/: CMakeLists.txt  SpMM_GECSB.cpp  SpMM_GECSB.h  runtime_yaml_config.h  runtime_yaml_config.register
cpp_testbed/src/spmm/MKL/: CMakeLists.txt  SpMM_Dense.h  SpMM_MKL.h  SpMM_MKL_BSR.h  runtime_yaml_config.h  runtime_yaml_config.register
cpp_testbed/src/spmm/TACO/: SpMM_TACO.h  runtime_yaml_config.h  runtime_yaml_config.register  taco.cpp  taco.h  taco_kernel.h  taco_kernel_16.cpp  taco_kernel_4.cpp
cpp_testbed/src/spmm/XNN/: SpMM_XNN.h  runtime_yaml_config.h  runtime_yaml_config.register  xnn_f32_16x1.cpp  xnn_f32_16x1_parallel.cpp
cpp_testbed/src/spmm/baselines/: CMakeLists.txt  SpMMGeneric.h  runtime_yaml_config.h  runtime_yaml_config.register  spmm.h  spmm_config.h  spmm_csr_a.cpp  spmm_csr_a_2d.cpp  spmm_csr_c.cpp  spmm_csr_c_2d.cpp  spmm_csr_c_2d_b.cpp  spmm_kernels_common.h  spmm_naive.cpp
cpp_testbed/src/spmm/nano/: SpMM_SOP.h  runtime_yaml_config.h  runtime_yaml_config.register
sbench/: __init__.py  active_rows_active_cols.py  dlmc_bench.py  gen_suitesparse_filelist.py  matrix_properties.py  matrix_stats.py  padding_gemm_bench.py  padding_reordering.py  pca.py  plot_mtx.py  test_spmm_binding.py
sbench/DDT/: FOPD.py  __init__.py  trace.py
sbench/SOP/: distribution.py  mapping.py  sop_bench.py  sop_bench_ilp.py  sop_bench_ilp_sweep.py  sop_bench_mapping.py  sop_driver.py  sop_fastest_mapping.py  sop_hand_configs.py  sop_histogram_paper.py  sop_histograms.py  (+4 more)
spmm_benchmarks/: active_rows_active_cols.py  dlmc_bench.py  matrix_properties.py  matrix_stats.py  padding_gemm_bench.py  padding_reordering.py  pca.py  plot_gemm.py  plot_mtx.py  row_reordering.py  test_spmm_binding.py
tools/: _figure_7_to_9_sbatch.sh  download_suitesparse.py  dump_spmm_implementations.py  dump_suitesparse_list.py  empirical_heuristic_multi_threaded.json  empirical_heuristic_single_threaded.json  experiment_runner.py  gen_gemm_kernels.py  gen_random_matrices.py  gen_test_tile_file.py  matrices_to_test.txt  matrices_to_test_dlmc_only.txt  pivot_demo_results.py  profiling.py  reordered_matrices_2.txt  run_niagara_sop_bench_3.sh  smtx_to_mtx.py  suitesparse_filelist.py  syncall_clusters.sh
(+747 files in other folders)
