add_subdirectory(spmm)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
message(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")

set(SPMM_METHODS_SOURCES ${SPMM_METHODS_SOURCES} PARENT_SCOPE)
set(SPMM_METHODS_INCLUDE_DIRS ${SPMM_METHODS_INCLUDE_DIRS} PARENT_SCOPE)
set(SPMM_METHODS_CXX_FLAGS ${SPMM_METHODS_CXX_FLAGS} PARENT_SCOPE)