file (GLOB SOURCES "${CMAKE_CURRENT_LIST_DIR}/*.cpp")

list(APPEND SPMM_METHODS_SOURCES ${SOURCES})
list(APPEND SPMM_METHODS_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR})

find_package(ARMCL REQUIRED OPTIONAL_COMPONENTS)

if (MKL_FOUND)
    list(APPEND SPMM_METHODS_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR})
    list(APPEND SPMM_METHODS_LIBRARIES ${ARMCL_LIBRARIES})
    list(APPEND SPMM_METHODS_INCLUDE_DIRS ${ARMCL_INCLUDE})
    list(APPEND SPMM_METHODS_CXX_FLAGS -DARMCL)
endif()



message(STATUS ARMCL_INCLUDE: ${ARMCL_INCLUDE})

set(SPMM_METHODS_CXX_FLAGS ${SPMM_METHODS_CXX_FLAGS} PARENT_SCOPE)
set(SPMM_METHODS_SOURCES ${SPMM_METHODS_SOURCES} PARENT_SCOPE)
set(SPMM_METHODS_INCLUDE_DIRS ${SPMM_METHODS_INCLUDE_DIRS} PARENT_SCOPE)
set(SPMM_METHODS_LIBRARIES ${SPMM_METHODS_LIBRARIES} PARENT_SCOPE)