file (GLOB SOURCES "${CMAKE_CURRENT_LIST_DIR}/*.cpp")

list(APPEND SPMM_METHODS_SOURCES ${SOURCES})
list(APPEND SPMM_METHODS_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR})

find_package(ARMPL REQUIRED OPTIONAL_COMPONENTS)

if (ARMPL_FOUND)
    list(APPEND SPMM_METHODS_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR})
    list(APPEND SPMM_METHODS_LIBRARIES ${ARMPL_LIBRARIES})
    list(APPEND SPMM_METHODS_INCLUDE_DIRS ${ARMPL_INCLUDE_DIRS})
    list(APPEND SPMM_METHODS_CXX_FLAGS -DARMPL)
endif()



message(STATUS ARMPL_INCLUDE: ${ARMPL_INCLUDE_DIRS})

set(SPMM_METHODS_CXX_FLAGS ${SPMM_METHODS_CXX_FLAGS} PARENT_SCOPE)
set(SPMM_METHODS_SOURCES ${SPMM_METHODS_SOURCES} PARENT_SCOPE)
set(SPMM_METHODS_INCLUDE_DIRS ${SPMM_METHODS_INCLUDE_DIRS} PARENT_SCOPE)
set(SPMM_METHODS_LIBRARIES ${SPMM_METHODS_LIBRARIES} PARENT_SCOPE)